Fix Pre-Draft Review Findings

--- a/index.tex
+++ b/index.tex
@@ -66,11 +66,11 @@ As the paper further compares RP with the observer design pattern \cite{gamma199
 
 However, we will not review the papers application of statistical methods since this is out of scope.
 
-In the following we will introduce and clarify important terms. Section 2 and 3 will examine the mentioned paper more closely and answer \emph{RQ1} and \emph{RQ2.1}. The questions \emph{RQ2.2} through \emph{2.4} will be tackled in section 4 where discuss earlier findings in the context of frontend engineering. Please note  further that if not stated differently, all code listings presented in this paper are written in JavaScript (ECMAScript 2017\footnote{\url{https://www.ecma-international.org/ecma-262/8.0/}}).
+In the following we will introduce and clarify important terms. Section 2 and 3 will examine the mentioned paper more closely and answer \emph{RQ1} and \emph{RQ2.1}. The questions \emph{RQ2.2} through \emph{2.4} will be tackled in section 4 where we discuss earlier findings in context of frontend engineering. Please note  further that if not stated differently, all code listings presented in this paper are written in JavaScript (ECMAScript 2017\footnote{\url{https://www.ecma-international.org/ecma-262/8.0/}}).
 
 \subsection{Empirical Software Engineering}
 
-Software engineering applies engineering principles when working with software artifacts \cite{159342} throughout their life cycle. Although ``\emph{the application of a systematic, disciplined, quantifiable approach to the development (\dots) of software (\dots)}'' \cite{159342} may rightful restrain us methodically, it is agreed upon that the process leading to a software product is of creative nature \cite{8051350}. It is this creative environment that keep the fundamental building blocks of software development, maintenance and operation in a constant flux of change. As tools and methods keep changing \cite{kapferer:2019:empirical}, software engineering organizations need to adapt to new circumstances often. Kapferer \cite{kapferer:2019:empirical} highlights in his introduction to empirical software engineering how the exertion of continuous quality improvement procedures like \emph{Plan/Do/Study/Act} \cite{deming} or an agile project setup like \emph{Scrum} leads to the controlled adoption of such. A reliable benchmark allows an organization to estimate feasibility of a new method or tool in advance as well as measure impact after its implementation.
+Software engineering applies engineering principles when working with software artifacts \cite{159342} throughout their life cycle. Although ``\emph{the application of a systematic, disciplined, quantifiable approach to the development (\dots) of software (\dots)}'' \cite{159342} may rightfully restrain us methodically, it is agreed upon that the process leading to a software product is of creative nature \cite{8051350}. It is this creative environment that keep the fundamental building blocks of software development, maintenance and operation in a constant flux of change. As tools and methods keep changing \cite{kapferer:2019:empirical}, software engineering organizations need to adapt to new circumstances often. Kapferer \cite{kapferer:2019:empirical} highlights in his introduction to empirical software engineering how the exertion of continuous quality improvement procedures like \emph{Plan/Do/Study/Act} \cite{deming} or an agile project setup like \emph{Scrum} leads to the controlled adoption of such. A reliable benchmark allows an organization to estimate feasibility of a new method or tool in advance as well as measure impact after its implementation.
 
 Hence software engineering problems lack analytical and scientific formalism, empirical software engineering applies empirical research methods in software engineering to yield a representative benchmark for a problem domain.
 
@@ -81,16 +81,16 @@ Roel J. Wieranga derives guidelines specifically for software engineering resear
 \subsection{FAIR Research Principles}
 \label{sec:fair}
 
-\emph{FAIR} is an abbreviation for Findability, Accessibility, Interoperability and Reusability. It was first introduced by Mark. D. Wilkinson et al. in March 2016 \cite{wilkinson:2016} and describes guidelines to foster digital research objects over the long-term. The guidelines want to maximization the value of research results for the science community as a whole. Following a summary of the four cornerstones:
+\emph{FAIR} is an abbreviation for Findability, Accessibility, Interoperability and Reusability. It was first introduced by Mark. D. Wilkinson et al. in March 2016 \cite{wilkinson:2016} and describes guidelines to foster digital research objects over the long-term. The guidelines want to maximize the value of research results for the science community as a whole. Following a summary of the four cornerstones:
 
 \begin{itemize}
 	\item \emph{Findability}: Objects are annotated with well-defined meta information. This information is usable for both humans and machines. An example is a globally unique, persistent identifier for a publicized paper or keywords highlighting the problem domains of a research result. There is a catalogue which provides searchable access to this meta information.
-	\item \emph{Accessibility}: Digital objects can be retrieved using an open, standardized communication protocol. It provides ways to authenticate and/or authorize users (again both humans and machines) if necessary. Meta information is always available, even if the actual object is not anymore.
+	\item \emph{Accessibility}: Digital objects can be retrieved using an open, standardized communication protocol. It provides ways to authenticate and/or authorize users (again both humans and machines) if necessary. Meta information is always available, even if the actual object might not be anymore.
 	\item \emph{Interoperability}: Meta information and the object it describes use formats and vocabularies following FAIR principles. For example an accepted, domain specific terminology is used or a data set collected during an experiment is available in XML format, alongside with a schema \footnote{\url{https://www.w3.org/TR/xmlschema-1/}} describing its structure. Referenced research results are part of the meta information.
-	\item \emph{Reusability}: Research results meet the respective science communities standards. Further results are released under a concise and accessible data usage license to simplify their reuse in follow-up research projects.
+	\item \emph{Reusability}: Research results meet the respective science communities standards. Results are released under a concise and accessible data usage license to simplify their reuse in follow-up research projects.
 \end{itemize}
 
-Hasselbring et al. \cite{2019arXiv190805986H} transfer the general applicable guidelines to the field of computer science research and formulate domain specific recommendations. Their key point is the request for treating software artifacts produced during a research project with the same level of care as the project report itself. Platforms like Zenodo\footnote{\url{https://zenodo.org}} in conjunction with GitHub\footnote{\url{https://github.com}} allow to reference, archive and later retrieve associated software artifacts for example.
+Hasselbring et al. \cite{2019arXiv190805986H} transfer these general applicable guidelines to the field of computer science research and formulate domain specific recommendations. Their key point is the request for treating software artifacts produced during a research project with the same level of care as the project report itself. Platforms like Zenodo\footnote{\url{https://zenodo.org}} in conjunction with GitHub\footnote{\url{https://github.com}} allow to reference, archive and later retrieve associated software artifacts for example.
 
 \subsection{Reactive Programming}
 RP is a declarative programming paradigm. In contrary to imperative programming, declarative code describes \emph{what} should be achieved rather than \emph{how} the process leading to that result looks like. With RP, we describe values, their transformation over time and how they depend on each other \cite{8354906}. A runtime system propagates changed values to their relevant dependencies, execute declared computations and ensures always a consistent state.
@@ -115,7 +115,7 @@ The example code in listing \ref{lst:rp-with-baconjs} uses the RP runtime of \em
 \subsection{Observer Design Pattern}
 When dividing a large component into smaller sub components, we usually want these components to be as isolated as necessary so they become more reusable, hence target for loose coupling between them. Still, the new components need a way to interact with each other.
 
-The observer pattern \cite{gamma1995design} deeply rooted in OOP defines an interface where \emph{observers} can subscribe to state change notifications of a \emph{subject}. Once notified, an \emph{observer} might query the \emph{subject} for its latest state and act accordingly to its implementation.
+The observer pattern \cite{gamma1995design} is deeply rooted in OOP and defines an interface where \emph{observers} can subscribe to state change notifications of a \emph{subject}. Once notified, an \emph{observer} might query the \emph{subject} for its latest state and act accordingly to its implementation.
 
 The \emph{EventTarget interface}\footnote{\url{https://dom.spec.whatwg.org/\#interface-eventtarget}} of the document object model \emph{(DOM)} API exposed to a browsers JavaScript runtime (among others) is an evolution of the observer pattern.
 
@@ -130,7 +130,7 @@ The code in listing \ref{lst:eventtarget} shows how an event handler (the \emph{
 
 \section{Revisit the Paper}
 
-Salvaneschi et al. start with a broad overview on RP, its history, how it came to be and why it is determined as a trend in computer science for some time. Right from the start the term reactive application is defined as a piece of software which reacts continuously on stimuli of different origins. These events are either rooted in a technical system component or triggered by a human user, for example when interacting with a GUI.
+Salvaneschi et al. start with a broad overview on RP, its history, how it came to be and why it is determined as a trend in computer science for some time. Right from the start the term reactive application is defined as a piece of software which reacts continuously on stimuli of different origins. These events are either originated in a technical system component or triggered by a human user, for example when interacting with a GUI.
 
 \subsection{Motivation}
 We get a summary of the similarities and differences of RP and the observer design pattern, chosen as representative for the OOP paradigm, within the first page. Salvaneschi et al. show benefits and potential problems of both. More concrete examples of RP and the observer pattern are given later in section 2. The papers main hypothesis is derived from the RP/OOP comparison, underpinned with external references: ``\emph{(...) it has been repeatedly argued that RP greatly improves over the traditional Observer pattern used in Object-oriented (OO) programming both (i) from the software design perspective as well as (ii) from the respective of facilitating comprehension of software.}'' Hence the lack of sufficient empirical evidence is then stated as motivation for the study at hand.
@@ -145,44 +145,44 @@ Salvaneschi et al. formulate the following four research questions which they th
 	\item \emph{What are the reasons for a difference - if a any - in comprehending RP programs and OO programs?}
 \end{itemize}
 
-The first three research questions were evaluated in an experiment with a small group of 38 subjects in an earlier study \cite{Salvaneschi:2014:ESP:2635868.2635895} already. The new study at hand adds 89 new subjects contributing more statistical significance. The new research question 4 targets to further interpret insights gained from the preceding questions and study.
+The first three research questions were evaluated in an experiment with a small group of 38 subjects in an earlier study \cite{Salvaneschi:2014:ESP:2635868.2635895} already. The new study at hand adds 89 new subjects contributing more statistical significance. Research question 4 targets to improve the interpretation of insights gained from the preceding questions and study.
 
 The research group structured its study in two parts: Within limited time, (i) part one asks two groups of subjects in an experiment to interpret either ten RP or ten OOP code samples and answer questions regarding the expected behavior. Code samples were formulated in Scala\footnote{\url{https://scala-lang.org/}}, using REScala\footnote{\url{http://www.rescala-lang.com/}} for RP. This is followed by (ii) a survey of four quantitative and one qualitative question where subjects can give their opinion on comprehensibility of RP and OOP source code.
 
-The comprehensibility part uses code examples from three different areas as defined by Salvaneschi et al.: Four questions are \emph{synthetic applications}, code describing pure data flow and the transformation of values. The six other questions are cases for \emph{graphical animations} and \emph{interactive applications}, hence all related to GUI engineering/development. Combined with a time limit, part one contributed to answer the first through to the third research question.
+The comprehensibility part uses code examples from three different areas as defined by Salvaneschi et al.: Four questions are \emph{synthetic applications}, code describing pure data flow and the transformation of values. The six other questions are cases for \emph{graphical animations} and \emph{interactive applications}, hence all related to GUI engineering/development. Combined with a time limit, part one contributed to answer the first three research question.
 
-The subject population consisted exclusively of students from a software engineering course, both taught in OOP and the observer pattern as well as RP. Before going into the actual study, the total of 127 subjects were put through a quantitative self-assessment to measure the overall programming skill level of the population. This was necessary to get the subjects acquainted with the survey tool used on one hand, on the other to collect data to answer their third research question.
+The subject population consisted exclusively of students from a software engineering course, both taught in OOP and the observer pattern as well as RP. Before going into the actual study, the total of 127 subjects were put through a quantitative self-assessment to measure the overall programming skill level of the population. This was necessary to get the subjects acquainted with the survey tool used on one hand, on the other to collect data to answer the third research question.
 
 \subsection{Results and Outlook}
 
-Salvaneschi et al. processed the gathered data from their experiment using a variety of statistical tests and derive three main findings: (i) RP increases the correctness of program comprehension; with the exception of two tasks, the RP group outperformed the OO group. Finding (ii) determines that RP style code does not require more time than comprehending their OO equivalent. With finding (iii) the group finally claims that understanding reactive applications written with RP are overall easier to understand, regardless of the individual programming skill level of the subject.
+Salvaneschi et al. processed the gathered data using a variety of statistical tests and derive three main findings: (i) RP increases the correctness of program comprehension; with the exception of two tasks, the RP group outperformed the OO group. Finding (ii) determines that RP style code does not require more time than comprehending their OO equivalent. With finding (iii) the group finally claims that understanding reactive applications written with RP are overall easier to understand, regardless of the individual programming skill level of the subject.
 
-The further evaluation of the survey provides then a mainly positive result in favor for RP. Beside the quantitative answers given by the subjects, especially the detailed examination of the qualitative gives an insight on the reasoning in why subjects may prefer RP over OOP or vice versa. Where subjects favoring RP speak up for overall more concise and easier composable code, subjects preferring OOP and the observer pattern do not like a steep learning curve and the hidden layer of abstraction given by the RP runtime.
+Further evaluation of the survey shows a mainly positive result in favor of RP. Beside the quantitative answers given by the subjects, especially the detailed examination of the qualitative ones give an insight on the reasoning in why subjects may prefer RP over OOP or vice versa. Where subjects favoring RP speak up for overall more concise and easier composable code, subjects preferring OOP and the observer pattern do not like the steep learning curve and the hidden layer of abstraction given by the RP runtime.
 
-Indeed the research team agrees later that the hidden complexity of the RP runtime and a large API surface area, i.e. with many specialized conversion functions, might not make it easy to onboard a developer with minimal or no RP experience.
+The research team agrees later that the hidden complexity of the RP runtime and a large API surface area, i.e. with many specialized conversion functions, might not make it easy to onboard a developer with minimal or no RP experience.
 
-With the outlook Salvaneschi et al. conclude the result evaluation with three suggestions for potential follow-up research:
+The result evaluation is concluded with the outlook and three suggestions for potential follow-up research:
 
 \begin{itemize}
-	\item \textbf{Interpretation of the results} connects the comprehension results with related research from psychology. They reference two respective three different cognitive models: \emph{top-down}, \emph{bottom-up} and the \emph{program model}. In context, each describes how a subject might perceive either RP or OOP source code. Designing a study focusing on this area would give deeper insight in how different programming concepts are understood from a psychological point of view. \textbf{REPHRASE}
+	\item \textbf{Interpretation of the results} connects the comprehension results with related research from the field of psychology. They reference two respective three different cognitive models: \emph{top-down}, \emph{bottom-up} and the \emph{program model}. In context, each describes how a subject might perceive either RP or OOP source code. Designing a study focusing on this area would give deeper insight in how different programming concepts are understood from a psychological point of view. \textbf{REPHRASE}
 	\item The \textbf{language design} (API surface area, number of combinators) plays an important role in order to make resulting code more comprehensible. The research group sees potential for further studies which investigate and compare how different languages and frameworks support or lessen the comprehensibility of RP code.
 	\item To understand how programmers work will eventually lead to improved \textbf{tool support} i.e. in IDEs. Reactive applications using RP or OOP can be visualized using a graph showing dependencies of values to each other. Hence the potential of a uniform way to interpret reactive code, no matter what paradigm it uses, might be worth of further research.
 \end{itemize}
 
 \subsection{Threats to Validity}
 
-Within the section \emph{Threats to Validity}, Salvaneschi et al. an overview of factors which could have pulled or pushed their results into one or another direction. They give insight in how they tried to minimize those influences, if possible. Neglecting \emph{construct} and \emph{internal validity}, the group identifies five issues related to \emph{external validity}: (i) Comparing two programming paradigms depends on an individuals programming skill level. Though a bias towards RP can be desisted, the study's result shows a favorable tendency towards RP in the end. (ii) The code examples used throughout the comprehension task try to cover the main areas of reactive applications. Hence these samples were carefully crafted to avoid giving away correct answers to easily, it is still questionable how representative for real-world applications they are. The research group members tried to minimize this thread by code review and iterative improvement. (iii) The experiment was conducted with student subjects solely. Though differences to more experienced developers can be considered as not significant as a cited study \cite{DiPenta} indicates. (iv) Finally the selection of Scala and REScala can be challenged to be representative for comprehending RP code overall. The selection was satisfying for this study though since the subjects were all exposed the same amount to these technologies and provides common foundation for the experiment.
+Within the section \emph{Threats to Validity}, Salvaneschi et al. an overview of factors which could have pulled or pushed their results into one or another direction. They give insight in how they tried to minimize those influences, if possible. Neglecting \emph{construct} and \emph{internal validity}, the group identifies five issues related to \emph{external validity}: (i) Comparing two programming paradigms depends on an individuals programming skill level. Though a bias towards RP can be desisted, the study's result shows a favorable tendency towards RP in the end. (ii) The code examples used throughout the comprehension task try to cover the main areas of reactive applications. Hence these samples were carefully crafted to avoid giving away correct answers to easily, it is still questionable how representative for real-world applications they are. The research group members tried to minimize this threat through code reviews and iterative improvements. (iii) The experiment was conducted with student subjects solely. Though differences to more experienced developers can be considered as not significant as a cited study \cite{DiPenta} indicates. (iv) Finally the selection of Scala and REScala can be challenged to be representative for comprehending RP code overall. The selection was satisfying for this study though since the subjects were all exposed the same amount to these technologies and provides common foundation for the experiment.
 
 
 \section{Paper Review}
 
 \subsection{Application of Empirical Research Methods}
 
-The main part of the study was conducted through a controlled experiment. With its fixed-design setup, quantitative data was collected and evaluated. With the survey ran upfront, they collected further quantitative data regarding the programming skill level of their subject population, but also ensured all participants were familiar with the software used in the main study. This precaution by Salvaneschi et al. ensured that the final experiment was not biased by unfamiliarity with the setup.
+The main part of the study was conducted through a controlled experiment. With its fixed-design setup, quantitative data was collected and evaluated. With the survey ran upfront, the research group collected quantitative data regarding the programming skill level of their subject population. They further ensured all participants were familiar with the survey software used in the main study. This precaution allowed Salvaneschi et al. to conduct the main experiment without a negative bias caused by unfamiliarity with the survey tool.
 
 The experiment was followed by another survey consisting of four quantitative and one open, qualitative question. Again, this survey was carefully structured so the open question could potentially be answered as unbiased as possible as the research group emphasize in their report.
 
-It is crucible for later revalidation of the presented results to reproduce the described study setup. The questions used in the afterwards survey are available in section 5.2 of the report. Though code examples from the experiment, questions used in the preparation survey nor the survey software are provided.
+It is crucible for later revalidation of the presented results to reproduce the described study setup. The questions used in the afterwards survey are available in section 5.2 of the report. Unfortunately code examples from the experiment, questions used in the preparation survey nor the survey software itself are provided.
 
 The paper does not give any explicit indication of the application of concepts and approaches defined by design science. Hence if we understand the  study at hand as the next, refined iteration of the preceding work by Salvaneschi et al. \cite{Salvaneschi:2014:ESP:2635868.2635895}, we could deduce the application of such principles on a higher level.
 
@@ -192,7 +192,7 @@ The study applied empirical research methods carefully and in a valid way overal
 
 The paper has a unique digital object identifier (\emph{DOI}) assigned and is, given necessary access permissions are granted, available online via the IEEE Xplore Online Library\footnote{\url{https://ieeexplore.ieee.org}}. This platform provides extensive meta information like citations, keywords or other work referencing the paper. By doing so, the research report conforms fully with criteria for \emph{Findability} and \emph{Accessibility}. We can further confirm that in regards of \emph{Interoperability} only domain-specific, accepted vocabularies and language is used. Qualified references to the work of third parties are present.
 
-This research report itself does not state an explicit license for reuse. The examination of available meta information in the IEEE Xplore Online Library finally reveals that the IEEE organization holds full copyrights on the report. Reuse permission can be requested. As already highlighted in the previous section, complementary objects like the experiments code samples or the complete survey questionnaires are not available. Though the report does fundamentally conform with the concepts of \emph{Reusability} by providing rich meta information, preceding points violate the concept of FAIR research in these regards.
+This research report itself does not state an explicit license for reuse. The examination of available meta information in the IEEE Xplore Online Library reveals that the IEEE organization holds full copyrights on the report eventually. Reuse permission can be requested. As already highlighted in the previous section, complementary objects like the experiments code samples or the complete survey questionnaires are not available. Though the report does fundamentally conform with the concepts of \emph{Reusability} by providing rich meta information, preceding points violate the concept of FAIR research.
 
 To further align the results at hand with FAIR research principles, we suggest to (i) state license information more explicitly and (ii) provide (at least) the code samples and questionnaires from the preliminary survey along with the report. If the software used throughout the experiment and surveys would be available too, the value for the science community could be further increased.
 
@@ -200,17 +200,15 @@ To further align the results at hand with FAIR research principles, we suggest t
 
 Before the terms of RP and OOP are introduced, Salvaneschi et al. define the \emph{reactive application}. This type of application distinguishes itself from a more traditional one-off input-to-output processing by producing a continuous, through interaction ever-changing, flow if information. By their very nature, reactive applications require design patterns to model this steady flow of data in a comprehensible way.
 
-\textbf{Reactive Programming} gets a thorough introduction by mentioning its roots in the Haskell programming language and the traction it gained throughout the recent years. The research group hypothesises about readability of reactive code facilitating RP. Further characteristics like the declarative way of describing data flows or baked-in composability inherited from its functional ancestor is noted later in section 2. The group gives an overview of how \emph{REScala} implements the paradigm of RP using \mintinline{Scala}{Var}s, \mintinline{Scala}{Signal}s and combinations of those. Because the subject population has a common understanding of Scala and was taught in RP using REScala, Salvaneschi et al. decided to use this flavor of RP for their experiment.
+\textbf{Reactive Programming} gets a thorough introduction by mentioning its roots in the Haskell programming language and the traction it gained throughout the recent years. The research group hypothesises about readability of reactive code facilitating RP. Further characteristics like the declarative way of describing data flows or baked-in composability inherited from its functional ancestor is noted later in section 2. The group gives an overview of how \emph{REScala} implements the paradigm of RP using \mintinline{Scala}{Var}s, \mintinline{Scala}{Signal}s and the combinations of those. Because the subject population has a common understanding of Scala and was taught in RP using REScala, Salvaneschi et al. decided to use this flavor of RP for their experiment.
 
-The paradigm of \textbf{Object Oriented Programming} is less prominently introduced compared to its competitor. For its usage in reactive applications, it is quickly reduced to the observer design pattern. Though the group highlights the decoupling of the observable and its observers as positive, inversion of control or incontrollable side effects in the observers code is noted as negative drawbacks lessen the readability and predictability of resulting source code. Since Scala does not only allow functional-flavored code, OOP code examples are presented in Scala too. We were not able to determine a specific implementation of the observer pattern which was used, therefore we conclude the code examples facilitate a theoretical implementation of the design pattern.
+The paradigm of \textbf{Object Oriented Programming} is less prominently introduced compared to its competitor. For its usage in reactive applications, it is quickly reduced to the observer design pattern. Though the group highlights the decoupling of the observable and its observers as positive, inversion of control and incontrollable side effects in the observers code is noted as negative drawbacks lessen the readability and predictability of resulting source code. Since Scala does not only allow functional-flavored code, OOP code examples are presented in Scala too. We were not able to determine a specific implementation of the observer pattern which was used and therefore conclude the code examples facilitate a theoretical implementation of the design pattern.
 
 Even though the paper assumes the observer design pattern as common knowledge in the expert audience, it could have been introduced more on a par with RP. Furthermore the comparison between the observer pattern and RP is legit, reducing the OOP paradigm to one sole case is disputable. We would have welcomed a more differentiated approach where i.e. the patterns roots in OOP are noted, but then are not used throughout the report as synonym for the pattern itself.
 
 \section{Practical Application of RP}
 
-The previously reviewed paper by Salvaneschi et al. explores how RP changes the comprehensibility of code for synthetic and interactive applications as well for graphical animations. Hence all of these problems can ultimately be implemented with RP and the observer pattern likewise, there is no measure given when the alluded tradeoffs like the additional layer of abstraction (RP) or inversion of control (observer) outweigh the gained benefits. We will show that there is no case for making RP nor the observer design pattern the ``only one right'' solution for every situation.
-
-We give two typical use cases from the area of frontend software engineering in the following and derive an answer to \emph{RQ2.2 ``When should RP be considered, and when not?''} accordingly.
+The previously reviewed paper by Salvaneschi et al. explores how RP changes the comprehensibility of code for synthetic and interactive applications as well for graphical animations. Hence all of these problems can ultimately be implemented with RP and the observer pattern likewise, there is no measure given when the alluded tradeoffs like the additional layer of abstraction (RP) or inversion of control (observer) outweigh gained benefits. We will show that there is no case for making RP nor the observer design pattern the ``only one right'' solution for every situation and answer \emph{RQ2.2 ``When should RP be considered, and when not?''} accordingly in context of frontend engineering.
 
 \subsection{Modelling Data Flow}
 
@@ -235,7 +233,7 @@ We can implement a solution facilitating a basic RP approach using the \mintinli
 	\label{lst:data-flow-rp}
 \end{listing}
 
-Listing \ref{lst:data-flow-observer} implements the exact same functionality as \ref{lst:data-flow-rp} but leverages an implementation of the observer design pattern after Gamma et al. \cite{gamma1995design}. By solely inspecting the line count of both implementation, we support results of Salvaneschi et al. \cite{7827078} regarding added boilerplate code. The RP solution reflects the mental model of fetching one resource after another clearly, the observer needs to implement code for handling \mintinline{JavaScript}{fetchAvatar}s result (line 12) before \mintinline{JavaScript}{fetchProfile} is even called (line 17) which further goes along with their research results regarding comprehensibility of RP code.
+Listing \ref{lst:data-flow-observer} implements the exact same functionality as \ref{lst:data-flow-rp} but leverages an implementation of the observer design pattern after Gamma et al. \cite{gamma1995design}. By solely inspecting the line count of both implementation, we support results of Salvaneschi et al. \cite{7827078} regarding added boilerplate code. The RP solution reflects the mental model of fetching one resource after another clearly whereas the observer needs to implement code for handling \mintinline{JavaScript}{fetchAvatar}s result (line 12) before \mintinline{JavaScript}{fetchProfile} is even called (line 17).
 
 \begin{listing}
 	\begin{minted}{JavaScript}
@@ -266,13 +264,13 @@ Listing \ref{lst:data-flow-observer} implements the exact same functionality as 
 
 \subsection{Event Handling}
 
-\textbf{TODO Revisit and check if this example is good/deep enough} The second use case is rather simple in its formulation, though represents the recurring common task of handling user interaction events when building frontend application.
+\textbf{TODO Revisit and check if this example is good/deep enough} The second use case is rather simple in its formulation, though represents the recurring common task of handling user interaction events when building a frontend application.
 
 \begin{framed}
-	\noindent\emph{UC2 Event Handling:} When a user clicks a button, add the current time to the click log list.
+	\noindent\emph{UC2 Event Handling:} When a user clicks the button, add the current time to a list showing the time of all logged button clicks.
 \end{framed}
 
-Listing \ref{lst:event-handling-observer} (observer) and \ref{lst:event-handling-rp} (RP) both show a simplistic solution for the above use case. Though both look in essence similar, the RP implementation using \emph{BaconJS} implies a lot of additional work behind the scene: \mintinline{JavaScript}{fromEvent} creates an \mintinline{JavaScript}{EventStream} which is connected to click events of the button. The \mintinline{JavaScript}{EventStream} emits every event, generates a \mintinline{JavaScript}{Date} using the \mintinline{JavaScript}{map} combinator and finally calls \mintinline{JavaScript}{logTime}. Embracing the observer design pattern without any detour, \ref{lst:event-handling-observer} registers an observer using \mintinline{JavaScript}{addEventListener} and calls \mintinline{JavaScript}{logTime} straight away.
+Listing \ref{lst:event-handling-observer} (observer) and \ref{lst:event-handling-rp} (RP) both show a simplistic solution for UC2. Though both look in essence similar, the RP implementation using \emph{BaconJS} implies a lot of additional work behind the scene: \mintinline{JavaScript}{fromEvent} creates an \mintinline{JavaScript}{EventStream} which is connected to click events of the button. The \mintinline{JavaScript}{EventStream} emits every event, generates a \mintinline{JavaScript}{Date} using the \mintinline{JavaScript}{map} combinator and finally calls \mintinline{JavaScript}{logTime}. Embracing the observer design pattern without any detour, \ref{lst:event-handling-observer} registers an observer using \mintinline{JavaScript}{addEventListener} and calls \mintinline{JavaScript}{logTime} straight away.
 
 \begin{listing}
 	\begin{minted}{JavaScript}
@@ -303,9 +301,9 @@ So, when should RP used and when should the observer design pattern be applied u
 
 \subsection{Outlook}
 
-We highly hypothesized about when the application of RP might be worth or when better stick with a more traditional observer pattern based approach in the previous sub section. A study providing empirical insight in this matter could yield valuable results to support software projects facing the question state in RQ2.2.
+We highly hypothesized about when the application of RP might be worth or when better stick with a more traditional observer pattern based approach in the previous sub section. A study providing empirical insight in this matter could yield valuable results to support software projects facing the question stated in RQ2.2.
 
-Our own experiences using RP for developing frontend applications using \emph{RxJS}\footnote{\url{https://rxjs.dev/}} resonates well with one of the proposed follow up topics by Salvaneschi et al.: ``\emph{Understanding how programmers work is fundamental to provide better tool support, especially IDEs, a research area which is vastly unexplored for RP.}''\cite{7827078} As the complexity of data flows, their transformations and dependencies increase, the need for better tooling does equally. Even though support libraries like \emph{rxjs-spy}\footnote{\url{https://cartant.github.io/rxjs-spy/}} or the inspection capabilities of \emph{BaconJS} do help to some extent while debugging, we agree with Salvaneschi et al. that improvements in this field could boost the adoption and productivity of RP further.
+Our own experiences using RP for developing frontend applications using \emph{RxJS}\footnote{\url{https://rxjs.dev/}} resonates well with one of the proposed follow up topics by Salvaneschi et al.: ``\emph{Understanding how programmers work is fundamental to provide better tool support, especially IDEs, a research area which is vastly unexplored for RP.}''\cite{7827078} As the complexity of data flows, their transformations and dependencies increase, the need for better tooling does equally. Even though support libraries like \emph{rxjs-spy}\footnote{\url{https://cartant.github.io/rxjs-spy/}} or the inspection capabilities of \emph{BaconJS} do help up to some extent during debugging, we agree with Salvaneschi et al. that improvements in this field could boost the adoption and productivity of RP further.
 
 \section{Conclusion}
 \begin{itemize}
