--- a/index.tex
+++ b/index.tex
@@ -5,7 +5,7 @@
 
 \setminted{autogobble=true, tabsize=2, linenos=true, frame=single, breaklines=true}
 
-\newcommand{\version}{v0.1}
+\newcommand{\version}{v0.2 DRAFT}
 
 
 \begin{document}
